# Curious-Muffin-Discord

./: README.md  cornyjokes.txt  curiousmuffin.py  information_storage.txt  keep_alive.py  pyproject.toml
assets/: cornyjokes.txt  information_storage.txt
